--- a/Code/crypto_sentiment.ipynb
+++ b/Code/crypto_sentiment.ipynb
@@ -317,186 +317,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>description</th>\n",
-       "      <th>text</th>\n",
-       "      <th>date</th>\n",
-       "      <th>language</th>\n",
-       "      <th>title_compound</th>\n",
-       "      <th>title_pos</th>\n",
-       "      <th>title_neu</th>\n",
-       "      <th>title_neg</th>\n",
-       "      <th>title_sent</th>\n",
-       "      <th>text_compound</th>\n",
-       "      <th>text_pos</th>\n",
-       "      <th>text_neu</th>\n",
-       "      <th>text_neg</th>\n",
-       "      <th>text_sent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>If you’re a Russian YouTuber, how do you get p...</td>\n",
-       "      <td>Russian creators are shut off from the global ...</td>\n",
-       "      <td>When Russia invaded Ukraine, Niki Proshin was ...</td>\n",
-       "      <td>2022-03-17</td>\n",
-       "      <td>en</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Why Isn't Bitcoin Booming?</td>\n",
-       "      <td>\"Bitcoin was seen by many of its libertarian-l...</td>\n",
-       "      <td>\"Bitcoin was seen by many of its libertarian-l...</td>\n",
-       "      <td>2022-03-12</td>\n",
-       "      <td>en</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.7713</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.831</td>\n",
-       "      <td>0.169</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CRYPTOVERSE-Bitcoin could be laid low by miner...</td>\n",
-       "      <td>Bitcoin miners are feeling the heat - and the ...</td>\n",
-       "      <td>Feb 22 (Reuters) - Bitcoin miners are feeling ...</td>\n",
-       "      <td>2022-02-22</td>\n",
-       "      <td>en</td>\n",
-       "      <td>-0.2732</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.792</td>\n",
-       "      <td>0.208</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-0.1779</td>\n",
-       "      <td>0.046</td>\n",
-       "      <td>0.887</td>\n",
-       "      <td>0.067</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Cryptoverse: Bitcoin gains conflict currency c...</td>\n",
-       "      <td>Bitcoin has leapt since Russia's invasion of U...</td>\n",
-       "      <td>March 1 (Reuters) - Bitcoin has leapt since Ru...</td>\n",
-       "      <td>2022-03-01</td>\n",
-       "      <td>en</td>\n",
-       "      <td>0.0258</td>\n",
-       "      <td>0.247</td>\n",
-       "      <td>0.515</td>\n",
-       "      <td>0.237</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>War Is Calling Crypto’s ‘Neutrality’ Into Ques...</td>\n",
-       "      <td>War in Ukraine and Western sanctions against R...</td>\n",
-       "      <td>Whose side is cryptocurrency on? If you had as...</td>\n",
-       "      <td>2022-03-08</td>\n",
-       "      <td>en</td>\n",
-       "      <td>-0.5994</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.606</td>\n",
-       "      <td>0.394</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-0.3182</td>\n",
-       "      <td>0.055</td>\n",
-       "      <td>0.854</td>\n",
-       "      <td>0.091</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                               title  \\\n",
-       "0  If you’re a Russian YouTuber, how do you get p...   \n",
-       "1                         Why Isn't Bitcoin Booming?   \n",
-       "2  CRYPTOVERSE-Bitcoin could be laid low by miner...   \n",
-       "3  Cryptoverse: Bitcoin gains conflict currency c...   \n",
-       "4  War Is Calling Crypto’s ‘Neutrality’ Into Ques...   \n",
-       "\n",
-       "                                         description  \\\n",
-       "0  Russian creators are shut off from the global ...   \n",
-       "1  \"Bitcoin was seen by many of its libertarian-l...   \n",
-       "2  Bitcoin miners are feeling the heat - and the ...   \n",
-       "3  Bitcoin has leapt since Russia's invasion of U...   \n",
-       "4  War in Ukraine and Western sanctions against R...   \n",
-       "\n",
-       "                                                text        date language  \\\n",
-       "0  When Russia invaded Ukraine, Niki Proshin was ...  2022-03-17       en   \n",
-       "1  \"Bitcoin was seen by many of its libertarian-l...  2022-03-12       en   \n",
-       "2  Feb 22 (Reuters) - Bitcoin miners are feeling ...  2022-02-22       en   \n",
-       "3  March 1 (Reuters) - Bitcoin has leapt since Ru...  2022-03-01       en   \n",
-       "4  Whose side is cryptocurrency on? If you had as...  2022-03-08       en   \n",
-       "\n",
-       "   title_compound  title_pos  title_neu  title_neg  title_sent  text_compound  \\\n",
-       "0          0.0000      0.000      1.000      0.000           0         0.0000   \n",
-       "1          0.0000      0.000      1.000      0.000           0        -0.7713   \n",
-       "2         -0.2732      0.000      0.792      0.208          -1        -0.1779   \n",
-       "3          0.0258      0.247      0.515      0.237           0         0.0000   \n",
-       "4         -0.5994      0.000      0.606      0.394          -1        -0.3182   \n",
-       "\n",
-       "   text_pos  text_neu  text_neg  text_sent  \n",
-       "0     0.000     1.000     0.000          0  \n",
-       "1     0.000     0.831     0.169         -1  \n",
-       "2     0.046     0.887     0.067         -1  \n",
-       "3     0.000     1.000     0.000          0  \n",
-       "4     0.055     0.854     0.091         -1  "
+       "'When Russia invaded Ukraine, Niki Proshin was already a year into making a living as a vlogger — he had a YouTube channel, a TikTok channel, and an Instagram. He also ran an online Russian club for a… [+5883 chars]'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bitcoin_en_df.head(1)['text']"
+    "bitcoin_en_df['text'][0]"
    ]
   },
   {
@@ -1100,62 +936,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate the lemmatizer\n",
     "# YOUR CODE HERE!\n",
-    "lemmatizer = WordNetLemmatizer()\n",
-    "\n",
+    "lemmatizer = WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['In February, shit hit the fan in the usual way: An old tweet resurfaced.',\n",
+       " 'Brantly Millegan, director of operations at Ethereum Name Service (ENS), a web3 business, had written the following in May 201… [+3096 chars]']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = ethereum_en_df['text'][0]\n",
+    "sent_tokenize(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['In',\n",
+       "  'February',\n",
+       "  ',',\n",
+       "  'shit',\n",
+       "  'hit',\n",
+       "  'the',\n",
+       "  'fan',\n",
+       "  'in',\n",
+       "  'the',\n",
+       "  'usual',\n",
+       "  'way',\n",
+       "  ':',\n",
+       "  'An',\n",
+       "  'old',\n",
+       "  'tweet',\n",
+       "  'resurfaced',\n",
+       "  '.'],\n",
+       " ['Brantly',\n",
+       "  'Millegan',\n",
+       "  ',',\n",
+       "  'director',\n",
+       "  'of',\n",
+       "  'operations',\n",
+       "  'at',\n",
+       "  'Ethereum',\n",
+       "  'Name',\n",
+       "  'Service',\n",
+       "  '(',\n",
+       "  'ENS',\n",
+       "  ')',\n",
+       "  ',',\n",
+       "  'a',\n",
+       "  'web3',\n",
+       "  'business',\n",
+       "  ',',\n",
+       "  'had',\n",
+       "  'written',\n",
+       "  'the',\n",
+       "  'following',\n",
+       "  'in',\n",
+       "  'May',\n",
+       "  '201…',\n",
+       "  '[',\n",
+       "  '+3096',\n",
+       "  'chars',\n",
+       "  ']']]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[word_tokenize(t) for t in sent_tokenize(s)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create a list of stopwords\n",
     "# YOUR CODE HERE!\n",
+    "stopwords = ('said', 'sent', 'found', 'including', 'today', 'announced', 'week', 'basically', 'also')\n",
     "\n",
-    "# Complete the `clean_text` function\n",
-    "def clean_text(article):\n",
-    "    \n",
-    "    # Define a set of stopwords using `stopwords.words()`\n",
-    "    sw = set(stopwords.words('english'))\n",
-    "\n",
-    "    # Define the regex parameters\n",
-    "    regex = re.compile(\"[^a-zA-Z ]\")\n",
-    "\n",
-    "    # Apply regex parameters to article\n",
-    "    re_clean = regex.sub('', article)\n",
-    "\n",
-    "    # Apply `word_tokenize` to the regex scrubbed text\n",
-    "    words = word_tokenize(re_clean)\n",
-    "\n",
-    "    # Create list of lower-case words that are not in the stopword set\n",
-    "    output = [word.lower() for word in words if word.lower() not in sw]\n",
-    "    \n",
-    "    # Return the final list\n",
-    "    return output\n",
     "\n",
     "# Expand the default stopwords list if necessary\n",
     "# YOUR CODE HERE!\n",
-    "def clean_text(article):\n",
-    "    \n",
-    "    # Define a set of stopwords using `stopwords.words()`\n",
-    "    sw = set(stopwords.words('english'))\n",
-    "    \n",
-    "    # Create custom stopwords\n",
-    "    sw_addons = {'said', 'sent', 'found', 'including', 'today', 'announced', 'week', 'basically', 'also'}\n",
     "\n",
-    "    # Define the regex parameters\n",
-    "    regex = re.compile(\"[^a-zA-Z ]\")\n",
-    "\n",
-    "    # Apply regex parameters to article\n",
-    "    re_clean = regex.sub('', article)\n",
-    "\n",
-    "    # Apply `word_tokenize` to the regex scrubbed text\n",
-    "    words = word_tokenize(re_clean)\n",
-    "\n",
-    "    # Create list of lower-case words that are not in the stopword set\n",
-    "    output = [word.lower() for word in words if word.lower() not in sw.union(sw_addons)]\n",
-    "    \n",
-    "    # Return the final list\n",
-    "    return output"
+    "stopwords_expanded = ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     In February, shit hit the fan in the usual way...\n",
+       "1     Coinbase reported that the share of trading vo...\n",
+       "2     Illustration by James Bareham / The Verge\\r\\n\\...\n",
+       "3     If it sounds too good to be true, youre not wr...\n",
+       "4     It seems that in 2022, you cant escape from th...\n",
+       "5     The cryptocurrency boom over the past few year...\n",
+       "6     A version of this article was published in TIM...\n",
+       "7     Joe Biden is dipping his toes into crypto. On ...\n",
+       "8     The cryptocurrency boom over the past few year...\n",
+       "9     The cryptocurrency boom over the past few year...\n",
+       "10    If blockchain technology is to reach true mass...\n",
+       "11    The news: Blockchain specialist ConsenSys scoo...\n",
+       "12    (Kitco News) The escalating Russia-Ukraine cri...\n",
+       "13    During the days leading up to the March 11 pur...\n",
+       "14    The travel services industry and fast-food cha...\n",
+       "15    Personal Finance Insider writes about products...\n",
+       "16    A Ukrainian nonprofit has raised bitcoin worth...\n",
+       "17    As the international community rallies around ...\n",
+       "18    Inflation rates have expectedly begun to soar ...\n",
+       "19    Representations of cryptocurrencies Bitcoin, E...\n",
+       "Name: text, dtype: object"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "article = ethereum_en_df['text']\n",
+    "article"
    ]
   },
   {
@@ -1166,31 +1101,43 @@
    "source": [
     "# Complete the tokenizer function\n",
     "def tokenizer(text):\n",
+    "    \n",
     "    \"\"\"Tokenizes text.\"\"\"\n",
     "    \n",
+    "\n",
     "    # Remove the punctuation from text\n",
     "\n",
     "   \n",
     "    # Create a tokenized list of the words\n",
     "    \n",
     "    \n",
-    "    # Lemmatize words into root words\n",
-    "\n",
+    "    # Lemmatize words into root word\n",
     "   \n",
     "    # Convert the words to lowercase\n",
     "    \n",
-    "    \n",
     "    # Remove the stop words\n",
-    "    \n",
     "    \n",
     "    return tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'words'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_39916/4000457474.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Create a new tokens column for Bitcoin\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# YOUR CODE HERE!\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocess_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marticle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_39916/1178889818.py\u001b[0m in \u001b[0;36mprocess_text\u001b[1;34m(article)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mprocess_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marticle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0msw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstopwords\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwords\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'english'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mregex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"[^a-zA-Z ]\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mre_clean\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mregex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msub\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0marticle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mwords\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mword_tokenize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mre_clean\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'words'"
+     ]
+    }
+   ],
    "source": [
     "# Create a new tokens column for Bitcoin\n",
     "# YOUR CODE HERE!"
